fix spacing on 20 14

--- a/assets/css/theme-specific/twentyfourteen.css
+++ b/assets/css/theme-specific/twentyfourteen.css
@@ -1,4 +1,4 @@
-.wpfc-twentyfourteen {
+.wpfc-sermon {
     margin: 0 auto;
     max-width: 474px;
 }
